Updated the content of markup

--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <link href="index_VG.css" rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Barlow+Semi+Condensed:wght@300;700&display=swap"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Bungee+Shade&display=swap"
-    rel="stylesheet">
-  <title>Jimi Hendrix</title>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&family=Barlow+Semi+Condensed:wght@300;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Bungee+Shade&display=swap" rel="stylesheet">
+  <title>Studio Ghibli</title>
 </head>
-
 <body>
 
   <div>
@@ -22,13 +17,13 @@
     <div>
 
       <header>
-        <h1>Jimi Hendrix</h1>
+        <h1>Studio Ghibli</h1>
       </header>
       <nav>
         <div>Bio</div>
-        <div class="marked">Top LPs</div>
+        <div class="marked">Popular films</div>
         <div>Best Songs</div>
-        <div>Monterrey 67</div>
+        <div>Shop</div>
       </nav>
       <main>
 
@@ -36,67 +31,61 @@
 
           <div class="album_data">
             <div>
-              <h1>Are You Experienced?</h1>
-              <h2>Released May 1967</h2>
+              <h1>Castle in the Sky</h1>
+              <h2>Released Aug 1986</h2>
             </div>
             <div>
-              <p>Musicians:</p>
+              <p>Team:</p>
               <ul>
-                <li>Jimi Hendrix, Guitar & Vocals</li>
-                <li>Mitch Mitchell, Drums & Backing vocals</li>
-                <li>Noel Redding, Bass guitar & Backing vocals</li>
+                <li>Director and author: Hayao Miyazaki</li>
+                <li>Producer: Isao Takahata</li>
+                <li>Musician: Joe Hisaishi</li>
               </ul>
             </div>
 
             <div class="album_description">
-              <p>Are You Experienced is the debut studio album by the Jimi Hendrix Experience. Released in 1967, the LP
-                was an immediate critical and commercial success, and it is widely regarded as one of the greatest
-                albums of all time. The album features Jimi Hendrix's innovative approach to songwriting and electric
-                guitar playing which soon established a new direction in psychedelic and hard rock music.</p>
+              <p>Castle in the Sky is a 1986 Japanese animated fantasy adventure film written and directed by Hayao Miyazaki. The first film was produced by Studio Ghibli. Set in a fictional late 19th century, it follows the adventures of a boy and girl who are trying to keep a powerful crystal from the army, a group of secret agents, and a family of pirates, while searching for a legendary floating castle. The film was distributed by Toei Company.</p>
             </div>
 
           </div>
 
           <div class="cover">
-            <img class="show_hover" src="./media/are_you_experienced_UK.jpg">
-            <img class="show_not_hover" src="./media/are_you_experienced_US.jpg">
+            <img class="show_hover" src="./media/Castle-in-the-Sky 1.jpg">
+            <img class="show_not_hover" src="./media/Castle-in-the-Sky 2.jpg">
           </div>
 
           <div class="song_list">
             <div>
-              <h2>Side One</h2>
+              <h2>Main Characters</h2>
               <ul>
-                <li>Foxy Lady</li>
-                <li>Manic Depression</li>
-                <li>Hey Joe</li>
-                <li>Love or Confusion</li>
-                <li>May This Be Love</li>
-                <li>I Don't Live Today</li>
+                <li>1. Pazu</li>
+                <li>2. Sheeta</li>
+                <li>3. Captain Dola</li>
+                <li>4. Colonel Muska</li>
+                <li>5. General Mouro</li>
+                <li>6. Uncle Pom</li>
               </ul>
             </div>
             <div>
-              <h2>Side Two</h2>
+              <h2>Other Characters</h2>
               <ul>
-                <li>The Wind Cries Mary</li>
-                <li>Fire</li>
-                <li>3rd Stone from the Sun</li>
-                <li>Foxey Lady</li>
-                <li>Are You Experienced?</li>
+                <li>1. Charles</li>
+                <li>2. Louis</li>
+                <li>3. Henri</li>
+                <li>4. Duffi</li>
+                <li>5. Okami</li>
               </ul>
             </div>
           </div>
 
           <ul class="anecdotes">
-            <li class="top_right_90">In 2013, Mojo magazine listed "Are You Experienced" as the greatest guitar album of
-              all time.</li>
+            <li class="top_right_90">In 2001, the Japanese magazine Animage ranked Laputa:Castle in the Sky 44th in their list of 100 Best Anime Productions of All Time.</li>
             <li class="empty"></li>
-            <li class="two_wide bottom_left_90">The budget for the recordings was rather limited so Chas Chandler
-              (producer) and Hendrix completed much of the album's pre-production work at their shared apartment.</li>
+            <li class="two_wide bottom_left_90">Castle in the Sky has had a strong impact on Japanese popular culture, with the "Laputa Effect" comparable to "a modern day monomyth for Japanese genre films and media.</li>
             <li class="empty tablet_empty"></li>
             <li class="empty phone_empty"></li>
-            <li class="image image_1 top_left_90">Chas Chandler, producer</li>
-            <li class="bottom_right_90">Are You Experienced sold more than one million copies within seven months of its
-              release.</li>
+            <li class="image image_1 top_left_90">Hayao Miyazaki, director & author</li>
+            <li class="bottom_right_90">The film received positive reviews and grossed over $16 million at the box office.</li>
           </ul>
 
         </article>
@@ -105,71 +94,62 @@
 
           <div class="album_data">
             <div>
-              <h1>Axis: Bold as Love</h1>
-              <h2>Released Dec 1967</h2>
+              <h1>Spirited Away</h1>
+              <h2>Released Jul 2001</h2>
             </div>
             <div>
-              <p>Musicians:</p>
+              <p>Team:</p>
               <ul>
-                <li>Jimi Hendrix, Guitar & Vocals</li>
-                <li>Mitch Mitchell, Drums & Backing vocals</li>
-                <li>Noel Redding, Bass guitar & Backing vocals</li>
+                <li>Director and author: Hayao Miyazaki</li>
+                <li>Producer: Isao Takahata</li>
+                <li>Musician: Joe Hisaishi</li>
               </ul>
             </div>
 
             <div class="album_description">
-              <p>Axis: Bold as Love is the second studio album by the Jimi Hendrix Experience. Track Records first
-                released it in the United Kingdom on December 1, 1967, only seven months after the release of the
-                group's highly successful debut, Are You Experienced. In the United States, Reprise Records delayed the
-                release until the following month. The album reached the top ten in the album charts in both UK and USA.
-              </p>
+              <p>Spirited Away is a 2001 Japanese animated fantasy film. It tells the story of Chihiro Ogino (Hiiragi), a ten-year-old girl who, while moving to a new neighborhood, enters the world of Kami (spirits of Japanese Shinto folklore). After her parents are turned into pigs by the witch Yubaba (Natsuki), Chihiro takes a job working in Yubaba's bathhouse to find a way to free herself and her parents and return to the human world.</p>
             </div>
 
           </div>
 
           <div class="cover">
-            <img class="show_hover" src="./media/axis_bold_as_love_2.jpg">
-            <img class="show_not_hover" src="./media/axis_bold_as_love_1.jpg">
+            <img class="show_hover" src="./media/Spirited-Away-1.jpg">
+            <img class="show_not_hover" src="./media/Spirited-Away-2.jpg">
           </div>
 
           <div class="song_list">
             <div>
-              <h2>Side One</h2>
+              <h2>Main Characters</h2>
               <ul>
-                <li>EXP</li>
-                <li>Up from the Skies</li>
-                <li>Spanish Castle Magic</li>
-                <li>Wait Until Tomorrow</li>
-                <li>Ain't No Telling</li>
-                <li>Little Wing</li>
-                <li>If Six Was Nine</li>
+                <li>1. Chihiro Ogino / Sen</li>
+                <li>2. Haku</li>
+                <li>3. Yubaba</li>
+                <li>4. Zeniba</li>
+                <li>5. Kamaji</li>
+                <li>6. Lin</li>
+                <li>7. Chichiyaku</li>
               </ul>
             </div>
             <div>
-              <h2>Side Two</h2>
+              <h2>Other Characters</h2>
               <ul>
-                <li>You've Got Me Floating</li>
-                <li>Castles Made of Sand</li>
-                <li>She's So Fine</li>
-                <li>One Rainy Wish</li>
-                <li>Little Miss Lover</li>
-                <li>Bold as Love</li>
+                <li>1. Aniyaku</li>
+                <li>2. No-Face</li>
+                <li>3. Aogaeru</li>
+                <li>4. Bandai-gaeru</li>
+                <li>5. Boh</li>
+                <li>6. Akio Ogino</li>
               </ul>
             </div>
           </div>
 
           <ul class="anecdotes">
-            <li class="two_wide bottom_left_90">Axis: Bold As Love's scheduled release date was almost delayed when
-              Hendrix lost the master tape of side one of the LP, leaving it in the back seat of a London taxi. With the
-              deadline looming, Hendrix, Chas Chandler, and engineer Eddie Kramer remixed most of side one in a single
-              overnight session.</li>
-            <li class="top_left_90">Hendrix stated that the cover would have been more appropriate had it highlighted
-              his Native American heritage.</li>
+            <li class="two_wide bottom_left_90">Susan Napier, professor of Japanese studies at Tufts University, called Spirited Away's wins at major Western award shows "a very big shot in the arm to the Japanese animation industry". She explained that people have started to see animation as "a real art form" instead of "childish, vulgar, things that you didn't take seriously" since the film took home the Academy Award.</li>
+            <li class="top_left_90">Spirited Away contains critical commentary on modern Japanese society concerning generational conflicts and environmental issues.</li>
             <li class="empty tablet_empty"></li>
             <li class="empty tablet_empty"></li>
-            <li class="two_wide image image_1 top_left_90">Jimi Hendrix with Eddie Kramer, chief studio engineer</li>
-            <li class="bottom_right_90"> "Little Wing" is one of Hendrix's most popular songs, with interpretations
-              recorded by musicians in a variety of styles.</li>
+            <li class="two_wide image image_1 top_left_90">Toshio Suzuki, producer and co-founder of Studio Ghibli</li>
+            <li class="bottom_right_90">Spirited Away has been widely regarded by critics as one of the greatest films of the 21st century, and to be among the best animated films ever made. </li>
           </ul>
 
         </article>
@@ -182,5 +162,4 @@
   </div>
 
 </body>
-
 </html>
