Changed some contents of markup

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
           <div class="song_list">
             <div>
-              <h2>Main Characters</h2>
+              <h2>Main</h2>
               <ul>
                 <li>1. Pazu</li>
                 <li>2. Sheeta</li>
@@ -67,7 +67,7 @@
               </ul>
             </div>
             <div>
-              <h2>Other Characters</h2>
+              <h2>Others</h2>
               <ul>
                 <li>1. Charles</li>
                 <li>2. Louis</li>
@@ -119,7 +119,7 @@
 
           <div class="song_list">
             <div>
-              <h2>Main Characters</h2>
+              <h2>Main</h2>
               <ul>
                 <li>1. Chihiro Ogino / Sen</li>
                 <li>2. Haku</li>
@@ -131,7 +131,7 @@
               </ul>
             </div>
             <div>
-              <h2>Other Characters</h2>
+              <h2>Other</h2>
               <ul>
                 <li>1. Aniyaku</li>
                 <li>2. No-Face</li>
